log/build_2024-12-13_17-07-17/Robot/stderr.log
  File "/home/seba/Desktop/Turtlebot/Turtlebot-estacionador/install/Robot/lib/python3.10/site-packages/Robot/basetest.py", line 80
    self.
         ^
SyntaxError: invalid syntax

